--- a/StoryToken-app/src/create.html
+++ b/StoryToken-app/src/create.html
@@ -121,8 +121,9 @@
                     <input type="text" class="form-control" name="phone" id="book-price" placeholder="Price- ETH" required>
                 </div>
 
-
+                
                 <input type="file" id="book-image" name="photo" accept="image/*">
+                <p>Choose an image for book</p>
                 <button type="submit" id="create-book">Mint Book</button>
 
               </div>
