--- a/StoryToken-app/src/owner.html
+++ b/StoryToken-app/src/owner.html
@@ -74,6 +74,7 @@
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
         <h2>Owner</h2>
+        <p class="a-number"><span id="current_account"></span></p>
         <ol>
           <li><a href="index.html">Home</a></li>
           <li>Owner</li>
