Added reload after each token operation

--- a/StoryToken-app/src/create.html
+++ b/StoryToken-app/src/create.html
@@ -44,6 +44,7 @@
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
         <h2>Create</h2>
+        <p class="a-number"><span id="current_account"></span></p>
         <ol>
           <li><a href="index.html">Home</a></li>
           <li>Create</li>
