removed bind event

--- a/StoryToken-app/src/create.html
+++ b/StoryToken-app/src/create.html
@@ -125,7 +125,7 @@
                 
                 <input type="file" id="book-image" name="photo" accept="image/*">
                 <p>Choose an image for book</p>
-                <button type="submit" id="create-book">Mint Book</button>
+                <button type="submit" id="create-book" onclick="App.createBook()">Mint Book</button>
 
               </div>
             </form>
