--- a/StoryToken-app/src/owner.html
+++ b/StoryToken-app/src/owner.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>StoryToken - Owner</title>
+  <title>StoryToken - Owned</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -25,6 +25,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/toastr.min.css">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -57,9 +58,9 @@
           <li><a href="index.html">Home</a></li>
           <!-- <li><a href="about.html">About</a></li> -->
           <li><a href="explore.html">Explore</a></li>
-          <li><a href="owner.html" class="active">Owner</a></li>
+          <li><a href="owner.html" class="active">My Books</a></li>
           <!-- <li><a href="contact.html">Contact</a></li> -->
-          <li><a href="create.html" class="create" style="display: none;">Create</a></li>
+          <li><a href="create.html" class="create" style="display: none;">Manage</a></li>
           <!-- create book option only for author -->
         </ul>
       </nav><!-- .navbar -->
@@ -73,11 +74,11 @@
     <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/library.webp');">
       <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-        <h2>Owner</h2>
+        <h2>My Books</h2>
         <p class="a-number"><span id="current_account"></span></p>
         <ol>
           <li><a href="index.html">Home</a></li>
-          <li>Owner</li>
+          <li>My Books</li>
         </ol>
 
       </div>
