--- a/StoryToken-app/src/explore.html
+++ b/StoryToken-app/src/explore.html
@@ -25,6 +25,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/toastr.min.css">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -57,9 +58,9 @@
           <li><a href="index.html">Home</a></li>
           <!-- <li><a href="about.html">About</a></li> -->
           <li><a href="explore.html" class="active">Explore</a></li>
-          <li><a href="owner.html">Owner</a></li>
+          <li><a href="owner.html">My Books</a></li>
           <!-- <li><a href="contact.html">Contact</a></li> -->
-          <li><a href="create.html" class="create" style="display: none;">Create</a></li>
+          <li><a href="create.html" class="create" style="display: none;">Manage</a></li>
           <!-- create book option only for author -->
         </ul>
       </nav><!-- .navbar -->
