--- a/StoryToken-app/src/index.html
+++ b/StoryToken-app/src/index.html
@@ -19,12 +19,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
+
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/toastr.min.css">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -57,10 +59,14 @@
           <li><a href="index.html" class="active">Home</a></li>
           <!-- <li><a href="about.html">About</a></li> -->
           <li><a href="explore.html">Explore</a></li>
-          <li><a href="owner.html">Owner</a></li>
+          <li><a href="owner.html">My Books</a></li>
           <!-- <li><a href="contact.html">Contact</a></li> -->
-          <li><a href="create.html" class="create" style="display: none;">Create</a></li>
-          <!-- create book option only for author -->
+          <li><a href="create.html" class="create" style="display: none;">Manage</a></li>
+          <!-- <li class="dropdown"><i class="bi-person-fill"></i> 
+            <ul>
+              <li><span id="current_account"></span><r/li>
+            </ul>
+          </li> -->
         </ul>
       </nav><!-- .navbar -->
 
