--- a/StoryToken-app/src/index.html
+++ b/StoryToken-app/src/index.html
@@ -19,14 +19,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/toastr.min.css">
+  <link href="assets/vendor/toastr/toastr.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -101,13 +100,17 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="js/dist/jquery.min.js"></script>
-  <script src="js/dist/jquery.countdown.min.js"></script>
-  <script src="js/dist/toastr.min.js"></script>
-  <script src="js/dist/web3.min.js"></script>
-  <script src="js/dist/truffle-contract.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+  <script src="assets/js/dist/jquery.min.js"></script>
+  <script src="assets/js/dist/jquery.countdown.min.js"></script>
+  <script src="assets/js/dist/wow.js"></script>
+  <script src="assets/js/dist/custom.js"></script>
+  <script src="assets/js/dist/web3.min.js"></script>
+  <script src="assets/js/dist/truffle-contract.js"></script>
+  <script src="js/firebase.js"></script>
   <script src="js/app.js"></script>
 
+  <script src="assets/vendor/toastr/toastr.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
