--- a/StoryToken-app/src/owner.html
+++ b/StoryToken-app/src/owner.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/toastr.min.css">
+  <link href="assets/vendor/toastr/toastr.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -103,23 +103,25 @@
 
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
-  <script src="js/dist/jquery.min.js"></script>
-  <script src="js/dist/jquery.countdown.min.js"></script>
-  <script src="js/dist/wow.js"></script>
-  <script src="js/dist/custom.js"></script>
-  <script src="js/dist/toastr.min.js"></script>
-  <script src="js/dist/web3.min.js"></script>
-  <script src="js/dist/truffle-contract.js"></script>
-  <script src="js/app.js"></script>
-
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+   <!-- Vendor JS Files -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+   <script src="assets/js/dist/jquery.min.js"></script>
+   <script src="assets/js/dist/jquery.countdown.min.js"></script>
+   <script src="assets/js/dist/wow.js"></script>
+   <script src="assets/js/dist/custom.js"></script>
+   <script src="assets/js/dist/web3.min.js"></script>
+   <script src="assets/js/dist/truffle-contract.js"></script>
+   <script src="js/firebase.js"></script>
+   <script src="js/app.js"></script>
+ 
+   <script src="assets/vendor/toastr/toastr.min.js"></script>
+   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+   <script src="assets/vendor/aos/aos.js"></script>
+   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
