--- a/StoryToken-app/src/create.html
+++ b/StoryToken-app/src/create.html
@@ -124,8 +124,8 @@
                 </div>
 
                 
-                <!-- <input type="file" id="book-image" name="photo" accept="image/*">
-                <p>Choose an image for book</p> -->
+                <input type="file" id="book-image" name="photo" accept="image/*">
+                <p>Choose an image for book</p>
                 <button type="submit" id="create-book" onclick="App.createBook()">Mint Book</button>
 
               </div>
