--- a/StoryToken-app/src/create.html
+++ b/StoryToken-app/src/create.html
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="col-md-12 ">
-                  <input type="email" class="form-control" name="email" id="book-author"  placeholder="Author" required>
+                  <input type="text" class="form-control" name="email" id="book-author"  placeholder="Author" required>
                 </div>
 
                 <div class="col-md-12">
@@ -147,8 +147,9 @@
   <script src="assets/js/dist/jquery.countdown.min.js"></script>
   <script src="assets/js/dist/wow.js"></script>
   <script src="assets/js/dist/custom.js"></script>
-  <script src="assets/js/dist/web3.min.js"></script>
-  <script src="assets/js/dist/truffle-contract.js"></script>
+  <!-- <script src="assets/js/dist/web3.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.37/dist/web3.min.js"></script>
+  <!-- <script src="assets/js/dist/truffle-contract.js"></script> -->
   <script src="js/firebase.js"></script>
   <script src="js/app.js"></script>
 
