--- a/StoryToken-app/src/owner.html
+++ b/StoryToken-app/src/owner.html
@@ -109,8 +109,9 @@
    <script src="assets/js/dist/jquery.countdown.min.js"></script>
    <script src="assets/js/dist/wow.js"></script>
    <script src="assets/js/dist/custom.js"></script>
-   <script src="assets/js/dist/web3.min.js"></script>
-   <script src="assets/js/dist/truffle-contract.js"></script>
+   <!-- <script src="assets/js/dist/web3.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.37/dist/web3.min.js"></script>
+  <!-- <script src="assets/js/dist/truffle-contract.js"></script> -->
    <script src="js/firebase.js"></script>
    <script src="js/app.js"></script>
  
